carrousel us value

--- a/partenaire.html
+++ b/partenaire.html
@@ -54,11 +54,11 @@
           <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
-              <li><a href="#"><span>Conseil</span> <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Integration <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Transformation digitale <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Gouvernance SI <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Référence PMO <i class="bi bi-chevron-right"></i></a></li>
+              <li><a href="service.html">Conseil </a></li>
+              <li><a href="service.html">Integration </a></li>
+              <li><a href="service.html">Transformation digitale </a></li>
+              <li><a href="service.html">Gouvernance SI </a></li>
+              <li><a href="service.html">Référence PMO </a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
