--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
-              <li><a href="#"><span>Conseil</span> <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Integration <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Transformation digitale <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Gouvernance SI <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#">Référence PMO <i class="bi bi-chevron-right"></i></a></li>
+              <li><a href="service.html">Conseil </a></li>
+              <li><a href="service.html">Integration </a></li>
+              <li><a href="service.html">Transformation digitale </a></li>
+              <li><a href="service.html">Gouvernance SI </a></li>
+              <li><a href="service.html">Référence PMO </a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
@@ -99,7 +99,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About Us</h2>
+          <h2>Apropos de nous</h2>
         </div>
 
         <div class="row content">
@@ -158,8 +158,78 @@
                 et garantes de l’état de l’art de notre métier.
               </p>
             </div>
+            <div class="container col-lg-8">
+              <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Notre Engagement</h5>
+                      <p>permettre le succès de nos clients et leur satisfaction, grâce à des équipes engagées.
+                        Nous sommes à l’écoute de nos clients pour mieux les servir et nous cherchons sans cesse 
+                        le meilleur moyen pour les aider à créer de la valeur pour leurs clients. Nos équipes, 
+                        orientées résultat, apportent par leur talent des solutions adéquates aux besoins clients 
+                        avec agilité, réactivité et proximité.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Notre Confiance</h5>
+                      <p>bâtir une relation de confiance durable avec nos clients et nos collaborateurs.
+                        Respect, solidarité, ouverture ainsi qu’échanges transparents et sincères sont les 
+                        éléments indispensables à la confiance. En interne, nous avons confiance en nos 
+                        talents : nous accompagnons leur évolution et développons la responsabilité et l’autonomie 
+                        de nos équipes.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Notre	Esprit d’équipe</h5>
+                      <p>La bonne coopération entre les membres de l’equipe demeure un facteur clé de la réussite de nos projets. 
+                        Elle crée une meilleure performance ainsi qu’une bonne ambiance au sein de l’entreprise. Les interactions 
+                        sont nombreuses et ne se limitent pas à des échanges. Elle consiste aussi en un soutien ou encore une complémentarité.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Notre	Sens de l’Innovation</h5>
+                      <p>créer et développer des solutions en réponse aux futures attentes des clients.
+                        L’innovation est un levier majeur de développement économique et de différenciation. UBS investit fortement auprès de ses partenaires et de son 
+                        écosystème pour concevoir de nouvelles solutions, avec une approche « customer centric ». Nous travaillons également main dans la main avec nos clients pour co-créer leurs offres et services de demain, de manière agile et dans une logique de croissance durable.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Notre	Ambition</h5>
+                      <p>Assurer notre croissance et savoir anticiper les besoins de nos clients.
+                        Tout en nous appuyant sur notre savoir-faire et nos valeurs, nous nous fixons des objectifs ambitieux pour satisfaire 
+                        nos clients et développer notre position de leader sur nos offres et nos marchés cibles.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
 
-            <div class="accordion-list">
+            <!--div class="accordion-list">
               <ul>
                 <li>
                   <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Notre Engagement <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
@@ -212,7 +282,7 @@
                 </li>
 
               </ul>
-            </div>
+            </div-->
 
           </div>
 
