remove hero image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
-          <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
+          <li><a class="nav-link scrollto" href="secteur.html">Secteurs d'activités</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
               <li><a href="service.html">Conseil </a></li>
@@ -60,7 +60,7 @@
               <li><a href="service.html">Référence PMO </a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
+          <li><a class="nav-link scrollto" href="realisation.html">Réalisations</a></li>
           <li><a class="nav-link scrollto" href="partenaire.html">Partenaires</a></li>          
           <li><a class="nav-link scrollto" href="contact.html">Contacts</a></li>
         </ul>
@@ -75,17 +75,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-7 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+        <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h2>Bienvenue</h2>
-          <h1>UPSILON </h1>
-          <h1>BUSINESS SOLUTION</h2> 
-          <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          <div class="title">
+            <h1>UPSILON </h1>
+            <h1>BUSINESS SOLUTION</h2> 
+            <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
           </div-->
-        </div>
-        <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/Image1.jpg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -99,7 +98,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Apropos de nous</h2>
+          <h2>A propos</h2>
         </div>
 
         <div class="row content">
@@ -171,8 +170,8 @@
                   <div class="carousel-item active">
                     <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Notre Engagement</h5>
-                      <p>permettre le succès de nos clients et leur satisfaction, grâce à des équipes engagées.
+                      <h5>Engagement</h5>
+                      <p>Permettre le succès de nos clients et leur satisfaction, grâce à des équipes engagées.
                         Nous sommes à l’écoute de nos clients pour mieux les servir et nous cherchons sans cesse 
                         le meilleur moyen pour les aider à créer de la valeur pour leurs clients. Nos équipes, 
                         orientées résultat, apportent par leur talent des solutions adéquates aux besoins clients 
@@ -182,8 +181,8 @@
                   <div class="carousel-item">
                     <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Notre Confiance</h5>
-                      <p>bâtir une relation de confiance durable avec nos clients et nos collaborateurs.
+                      <h5>Confiance</h5>
+                      <p>Bâtir une relation de confiance durable avec nos clients et nos collaborateurs.
                         Respect, solidarité, ouverture ainsi qu’échanges transparents et sincères sont les 
                         éléments indispensables à la confiance. En interne, nous avons confiance en nos 
                         talents : nous accompagnons leur évolution et développons la responsabilité et l’autonomie 
@@ -193,7 +192,7 @@
                   <div class="carousel-item">
                     <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Notre	Esprit d’équipe</h5>
+                      <h5>Esprit d’équipe</h5>
                       <p>La bonne coopération entre les membres de l’equipe demeure un facteur clé de la réussite de nos projets. 
                         Elle crée une meilleure performance ainsi qu’une bonne ambiance au sein de l’entreprise. Les interactions 
                         sont nombreuses et ne se limitent pas à des échanges. Elle consiste aussi en un soutien ou encore une complémentarité.</p>
@@ -202,8 +201,8 @@
                   <div class="carousel-item">
                     <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Notre	Sens de l’Innovation</h5>
-                      <p>créer et développer des solutions en réponse aux futures attentes des clients.
+                      <h5>Sens de l’Innovation</h5>
+                      <p>Créer et développer des solutions en réponse aux futures attentes des clients.
                         L’innovation est un levier majeur de développement économique et de différenciation. UBS investit fortement auprès de ses partenaires et de son 
                         écosystème pour concevoir de nouvelles solutions, avec une approche « customer centric ». Nous travaillons également main dans la main avec nos clients pour co-créer leurs offres et services de demain, de manière agile et dans une logique de croissance durable.</p>
                     </div>
@@ -211,7 +210,7 @@
                   <div class="carousel-item">
                     <img src="assets/img/work.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Notre	Ambition</h5>
+                      <h5>Ambition</h5>
                       <p>Assurer notre croissance et savoir anticiper les besoins de nos clients.
                         Tout en nous appuyant sur notre savoir-faire et nos valeurs, nous nous fixons des objectifs ambitieux pour satisfaire 
                         nos clients et développer notre position de leader sur nos offres et nos marchés cibles.</p>
