--- a/partenaire.html
+++ b/partenaire.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
-          <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
+          <li><a class="nav-link scrollto" href="secteur.html">Secteurs d'activités</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
               <li><a href="service.html">Conseil </a></li>
@@ -61,7 +61,7 @@
               <li><a href="service.html">Référence PMO </a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
+          <li><a class="nav-link scrollto" href="realisation.html">Réalisations</a></li>
           <li><a class="nav-link scrollto active" href="partenaire.html">Partenaires</a></li>          
           <li><a class="nav-link scrollto" href="contact.html">Contacts</a></li>
         </ul>
@@ -76,17 +76,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h2>partenaires</h2>
-          <h1>UPSILON </h1>
-          <h1>BUSINESS SOLUTION</h2> 
-          <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+        <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <h2>Partenaires</h2>
+          <div class="title">
+            <h1>UPSILON </h1>
+            <h1>BUSINESS SOLUTION</h2> 
+            <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
           </div-->
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/Image1.jpg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -100,7 +99,7 @@
 
         <div class="row" data-aos="zoom-in">
           <div class="section-title">
-            <h2>Patenaires</h2>
+            <h2>Partenaires</h2>
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/partenaires/Image3.png" class="img-fluid" alt="">
@@ -201,6 +200,79 @@
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/partenaires/Image28.png" class="img-fluid" alt="">
           </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image29.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image30.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image31.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image32.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image33.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image34.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image35.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image36.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image37.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image38.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image39.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image40.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image41.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image42.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image43.png" class="img-fluid" alt="">
+          </div>
+          
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image44.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image45.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/partenaires/Image46.png" class="img-fluid" alt="">
+          </div>
+
         </div>
 
       </div>
