--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
-          <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
+          <li><a class="nav-link scrollto" href="secteur.html">Secteurs d'activités</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
               <li><a href="service.html">Conseil </a></li>
@@ -60,7 +60,7 @@
               <li><a href="service.html">Référence PMO </a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
+          <li><a class="nav-link scrollto" href="realisation.html">Réalisations</a></li>
           <li><a class="nav-link scrollto" href="partenaire.html">Partenaires</a></li>          
           <li><a class="nav-link scrollto active" href="contact.html">Contacts</a></li>
         </ul>
@@ -72,20 +72,19 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-
+    
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+        <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h2>Contacts</h2>
-          <h1>UPSILON </h1>
-          <h1>BUSINESS SOLUTION</h2> 
-          <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          <div class="title">
+            <h1>UPSILON </h1>
+            <h1>BUSINESS SOLUTION</h2> 
+            <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
           </div-->
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/Image1.jpg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -114,7 +113,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>upsilonbusinesssolution@gmail.com</p>
+                <p>info@upsilon-solutions.com</p>
               </div>
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -162,7 +161,8 @@
 
     <section>
       <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d528.4500490703018!2d-3.988196424256631!3d5.395505499841173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sci!4v1703022770282!5m2!1sfr!2sci" width="100%" height="290px;" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!--iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe-->
       </div>
     </section>
 
