--- a/realisation.html
+++ b/realisation.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
-          <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
+          <li><a class="nav-link scrollto" href="secteur.html">Secteurs d'activités</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
               <li><a href="service.html">Conseil </a></li>
@@ -60,7 +60,7 @@
               <li><a href="service.html">Référence PMO </a></li> 
             </ul>
           </li>
-          <li><a class="nav-link scrollto active" href="realisation.html">Realisations</a></li>
+          <li><a class="nav-link scrollto active" href="realisation.html">Réalisations</a></li>
           <li><a class="nav-link scrollto" href="partenaire.html">Partenaires</a></li>          
           <li><a class="nav-link scrollto" href="contact.html">Contacts</a></li>
         </ul>
@@ -75,17 +75,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+        <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h2>Réalisations</h2>
-          <h1>UPSILON </h1>
-          <h1>BUSINESS SOLUTION</h2> 
-          <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          <div class="title">
+            <h1>UPSILON </h1>
+            <h1>BUSINESS SOLUTION</h2> 
+            <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
           </div-->
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/Image1.jpg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
