--- a/secteur.html
+++ b/secteur.html
@@ -28,13 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Arsha
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -43,14 +36,14 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/upson business solotion logo.png"/></a></h1>
+      <!-- <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/upson business solotion logo.png"/></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto"><img src="assets/img/upson business solotion logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
-          <li><a class="nav-link scrollto active" href="secteur.html">Secteur d'activés</a></li>
+          <li><a class="nav-link scrollto active" href="secteur.html">Secteurs d'activités</a></li>
           <li class="dropdown"><a href="service.html"><span>Services</span></a>
             <ul>
               <li><a href="service.html">Conseil </a></li>
@@ -60,7 +53,7 @@
               <li><a href="service.html">Référence PMO </a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
+          <li><a class="nav-link scrollto" href="realisation.html">Réalisations</a></li>
           <li><a class="nav-link scrollto" href="partenaire.html">Partenaires</a></li>          
           <li><a class="nav-link scrollto" href="contact.html">Contacts</a></li>
         </ul>
@@ -75,17 +68,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h2>Secteur d'activités</h2>
-          <h1>UPSILON </h1>
-          <h1>BUSINESS SOLUTION</h2> 
-          <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+        <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <h2>Secteurs d'activités</h2>
+          <div class="title">
+            <h1>UPSILON </h1>
+            <h1>BUSINESS SOLUTION</h2> 
+            <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
           </div-->
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/Image1.jpg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -99,7 +91,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Secteur d'activités</h2>
+          <h2>Secteurs d'activités</h2>
         </div>
         <div class="col">
           <div class="row ">
@@ -127,7 +119,7 @@
               <div class="icon-box">
                 <center>
                 <div class="icon"><i class="fa-solid fa-industry"></i></div>
-                <h4><a href="">Indutrie</a></h4>
+                <h4><a href="">Industrie</a></h4>
                 <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                 </center>
               </div>
@@ -137,7 +129,7 @@
               <div class="icon-box">
                 <center>
                 <div class="icon"><i class="fa-solid fa-screwdriver-wrench"></i></div>
-                <h4><a href="">Télécom</a></h4>
+                <h4><a href="">Télécoms</a></h4>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                 </center>
               </div>
@@ -159,8 +151,18 @@
               <div class="icon-box">
                 <center>
                 <div class="icon"><i class="fa-solid fa-money-bill"></i></div>
-                <h4><a href="">Commerce</a></h4>
+                <h4><a href="">Distribution</a></h4>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                </center>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box">
+                <center>
+                <div class="icon"><i class="fa-solid fa-building-circle-arrow-right"></i></div>
+                <h4><a href="">Services</a></h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                 </center>
               </div>
             </div>
@@ -184,15 +186,14 @@
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
-
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Notre Missions</h3>
             <p>Aider nos clients à réussir leur transformation organisationnelle et digitale.</p>
           </div>
-          <div class="col-lg-3 cta-btn-container text-center">
+          <!--div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">En savoir plus</a>
-          </div>
+          </div-->
         </div>
 
       </div>
