--- a/service.html
+++ b/service.html
@@ -28,13 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Arsha
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -50,17 +43,17 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Accueil</a></li>
-          <li><a class="nav-link scrollto" href="secteur.html">Secteur d'activés</a></li>
+          <li><a class="nav-link scrollto" href="secteur.html">Secteurs d'activités</a></li>
           <li class="dropdown"><a href="service.html"><span style="color: orange;">Services</span></a>
             <ul>
-              <li><a href="#conseil-itegration"><span>Conseil</span> <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#conseil-itegration">Integration <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#gouvernance-digital">Transformation digitale <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#gouvernance-digital">Gouvernance SI <i class="bi bi-chevron-right"></i></a></li>
-              <li><a href="#reference-si">Référence PMO <i class="bi bi-chevron-right"></i></a></li>
+              <li><a href="#conseil-itegration"><span>Conseil</span></a></li>
+              <li><a href="#conseil-itegration">Integration</a></li>
+              <li><a href="#gouvernance-digital">Transformation digitale</a></li>
+              <li><a href="#gouvernance-digital">Gouvernance SI</a></li>
+              <li><a href="#reference-si">Référence PMO</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="realisation.html">Realisations</a></li>
+          <li><a class="nav-link scrollto" href="realisation.html">Réalisations</a></li>
           <li><a class="nav-link scrollto" href="partenaire.html">Partenaires</a></li>          
           <li><a class="nav-link scrollto" href="contact.html">Contacts</a></li>
         </ul>
@@ -75,17 +68,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+        <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h2>Services</h2>
-          <h1>UPSILON </h1>
-          <h1>BUSINESS SOLUTION</h2> 
-          <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          <div class="title">
+            <h1>UPSILON </h1>
+            <h1>BUSINESS SOLUTION</h2> 
+            <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
+          </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
           </div-->
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/Image1.jpg" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -102,7 +94,7 @@
           <h2>Services</h2>
         </div>        
 
-        <div class="col container">
+        <div class="row container">
 
           <div id="conseil-itegration" class="col-lg" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
@@ -116,7 +108,9 @@
               <h3>Intégration</h3>
               <ul>                
                 <li><i class="bx bx-check"></i>Outils de Sécurité SI et IT</li>
-                <li><i class="bx bx-check"></i>Cloud et Virtualisation ( Archivage, stockage Infrastructures Microsoft Office 365, Active Directory) </li>
+                <li><i class="bx bx-check"></i>Cloud et Virtualisation </li>
+                <li><i class="bx bx-check"></i>Archivage & Stockage</li>
+                <li><i class="bx bx-check"></i>Infrastructures Microsoft Office 365 & Active Directory</li>
                 <!--li class="na"><i class="bx bx-x"></i> <span>Pharetra massa massa ultricies</span></li>
                 <li class="na"><i class="bx bx-x"></i> <span>Massa ultricies mi quis hendrerit</span></li-->
               </ul>
@@ -165,13 +159,13 @@
 
         <div class="row">
           <div class="col-lg-5 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-            <img src="assets/img/bureau.jpg" class="img-fluid" alt="">
+            <img src="assets/img/technolgy.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-7 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h1><strong>Notre Vision</strong></h1>
             <h3>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h3>
             
-            <a href="#about" class="btn-learn-more">Learn More</a>           
+            <!--a href="#about" class="btn-learn-more">Learn More</a-->           
 
           </div>
         </div>
@@ -188,11 +182,7 @@
         &copy; Copyright <strong><span>UPSILON BUSINESS SOLUTION</span></strong>. Tous droits réservés
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-       
+
       </div>
     </div>
   </footer><!-- End Footer -->
