--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Arsha
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -43,9 +36,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/upson business solotion logo.png"/></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto"><img src="assets/img/upson business solotion logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -72,14 +63,13 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    
+
     <div class="container">
       <div class="row">
         <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h2>Contacts</h2>
           <div class="title">
-            <h1>UPSILON </h1>
-            <h1>BUSINESS SOLUTION</h2> 
+            <h1>UPSILON BUSINESS SOLUTIONS</h1>
             <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
           </div>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
@@ -161,8 +151,7 @@
 
     <section>
       <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d528.4500490703018!2d-3.988196424256631!3d5.395505499841173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sci!4v1703022770282!5m2!1sfr!2sci" width="100%" height="290px;" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <!--iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d528.4500490703018!2d-3.988196424256631!3d5.395505499841173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sci!4v1703022770282!5m2!1sfr!2sci" frameborder="0" width="100%" height="290px;" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
