--- a/secteur.html
+++ b/secteur.html
@@ -36,8 +36,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <!-- <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/upson business solotion logo.png"/></a></h1> -->
-      <!-- Uncomment below if you prefer to use an image logo -->
+      
       <a href="index.html" class="logo me-auto"><img src="assets/img/upson business solotion logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
@@ -71,13 +70,9 @@
         <div class="col d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h2>Secteurs d'activités</h2>
           <div class="title">
-            <h1>UPSILON </h1>
-            <h1>BUSINESS SOLUTION</h2> 
+            <h1>UPSILON BUSINESS SOLUTIONS</h1>
             <h4>Devenir le trusted-partner de l’écosystème de la transformation digitale.</h4>
-          </div>
-          <!--div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">CEO Message</a>            
-          </div-->
+          </div>          
         </div>
       </div>
     </div>
